<package format="2">
    <name>manipulator_planner</name>
    <version>0.0.0</version>
    <description>The manipulator_planner package</description>
    <maintainer email="surpace2479@gmail.com">Ryoga Sato</maintainer>
    
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>
    
    <build_depend>tf2_ros</build_depend>
    <exec_depend>tf2_ros</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <build_depend>trajectory_msgs</build_depend>
    <exec_depend>trajectory_msgs</exec_depend>

    <build_depend>visualization_msgs</build_depend>
    <exec_depend>visualization_msgs</exec_depend>
</package>